# olymp

./: .gitignore  README.md  README1.md  TZ.md  display_and_save.py  generate_output.py  main.py  pyproject.toml  read_input.py
logging_config/: __init__.py  log_config.json  log_config.py
script/: display_and_save.py  generate_output.py  main.py  read_input.py
script/logging_config/: log_config.json  log_config.py
script/modules/: __init__.py  display_and_save.py  generate_output.py  models.py  read_input.py
script/tests/: test_display_and_save.py  test_generate_output.py  test_read_input.py
script/utils/: utils.py
