[tool.poetry]
name = "fora-script"
version = "0.1.0"
description = "Script for parsing results from file, calculation time and sorting results, displaying results and writing it to file."
authors = ["deriabin_85 <deriabin_85@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
